openFile(...) in FIleSystemPOSIX does not call fileSystemRepresentation https://bugs.webkit.org/show_bug.cgi?id=39882

Reviewed by Darin Adler.

No new tests. Existing tests in fast/files should suffice.

* platform/posix/FileSystemPOSIX.cpp:
(WebCore::openFile): pass the path parameter through fileSystemRepresentation before using it.



Canonical link: https://commits.webkit.org/51417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60374 268f45cc-cd09-0410-ab3c-d52691b4dbfc